Transcript audio with azure and process with openAI

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,28 @@ REDIS_PORT="6379"
 REDIS_USER=""
 REDIS_PASSWORD=""
 REDIS_URL="rediss://${REDIS_USER}:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}"
+
+# [TELEGRAM]
+TOKEN = UNKNOWN
+TOKEN_VINDR_bot= UNKNOWN
+
+# [AZURE]
+AZURE_SPEECH_KEY = UNKNOWN
+AZURE_SERVICE_REGION = southeastasia
+
+# [OPENAI]
+OPENAI_API_KEY = UNKNOWN
+
+# [paths]
+ffmpeg_folder = D:\Project\speech_llm\ffmpeg\bin
+
+# [General]
+domain = https://pacs-poc.vindr.ai
+tenant = pacs-poc
+username = admin
+password = admin!123#
+
+[DEFAULT]
+ApiKey = UNKNOWN
+BasicAuthUsername = UNKNOWN
+BasicAuthPassword = UNKNOWN
