--- a/package.json
+++ b/package.json
@@ -26,18 +26,24 @@
 		"@fastify/sensible": "^5.3.0",
 		"@fastify/swagger": "^8.10.0",
 		"@fastify/swagger-ui": "^1.9.3",
+		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@prisma/client": "^5.3.1",
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
 		"fastify": "^4.23.2",
 		"fastify-plugin": "^4.5.1",
 		"fastify-zod": "^1.4.0",
+		"fluent-ffmpeg": "^2.1.3",
+		"microsoft-cognitiveservices-speech-sdk": "^1.34.0",
+		"openai": "^4.28.0",
+		"uuid": "^9.0.1",
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.3.85",
 		"@swc/jest": "^0.2.29",
 		"@types/bcrypt": "^5.0.0",
+		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/jest": "^29.5.5",
 		"@types/node": "^20.6.2",
 		"@types/uuid": "^9.0.4",
@@ -52,7 +58,6 @@
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.2.2",
-		"uuid": "^9.0.1"
+		"typescript": "^5.2.2"
 	}
 }
