--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,21 @@ DATABASE_URL_WITHOUT_SCHEMA="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@
 DATABASE_URL="${DATABASE_URL_WITHOUT_SCHEMA}/${DATABASE_NAME}"
 DATABASE_URL_NON_POOLING="${DATABASE_URL_WITHOUT_SCHEMA}/${DATABASE_NAME}"
 
+# Minio
+MINIO_ENDPOINT="localhost"
+MINIO_PORT="9000"
+MINIO_USE_SSL="false"
+MINIO_ROOT_USER="minio"
+MINIO_ROOT_PASSWORD="minio"
+MINIO_BUCKET_RAW_AUDIO="agent-qc-raw-audio"
+MINIO_BUCKET_PROCESSED_AUDIO="agent-qc-processed-audio"
+
+# RabbitMQ
+RABBITMQ_HOST="localhost"
+RABBITMQ_PORT="5672"
+RABBITMQ_USER="guest"
+RABBITMQ_PASSWORD="guest"
+
 # Redis
 REDIS_HOST="redis"
 REDIS_PORT="6379"
