--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"lint": "eslint src",
 		"format": "prettier --write .",
 		"dev": "tsnd --respawn --transpile-only --exit-child src/server.ts",
-		"migrate:dev": "prisma migrate dev"
+		"migrate:dev": "prisma migrate dev",
+		"worker:audio-converter": "ts-node src/workers/audio-converter.worker.ts",
+		"worker:audio-transcriber": "ts-node src/workers/audio-transcriber.worker.ts",
+		"worker:conversation-analyzer": "ts-node src/workers/conversation-analyzer.worker.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -28,6 +31,7 @@
 		"@fastify/swagger-ui": "^1.9.3",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@prisma/client": "^5.3.1",
+		"amqplib": "^0.10.7",
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
 		"fastify": "^4.23.2",
@@ -35,6 +39,7 @@
 		"fastify-zod": "^1.4.0",
 		"fluent-ffmpeg": "^2.1.3",
 		"microsoft-cognitiveservices-speech-sdk": "^1.34.0",
+		"minio": "^8.0.5",
 		"openai": "^4.28.0",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.2"
@@ -42,6 +47,7 @@
 	"devDependencies": {
 		"@swc/core": "^1.3.85",
 		"@swc/jest": "^0.2.29",
+		"@types/amqplib": "^0.10.7",
 		"@types/bcrypt": "^5.0.0",
 		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/jest": "^29.5.5",
